<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_habits"
        android:icon="@drawable/ic_habit"
        android:title="@string/navigation_habits" />

    <item
        android:id="@+id/navigation_addictions"
        android:icon="@drawable/ic_addiction"
        android:title="@string/navigation_addictions" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/navigation_messages" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/navigation_settings" />
</menu>